<resources>
    <string name="app_name">About Me</string>
    <string name="about_name">Nadiar Syaripul</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="about_me">
        Tidur, Nak… \n\n

Mak tahu langkahmu sudah amat kepayahan, menyusuri hidup dan naik turun tangga samsara yang panjangnya ampun-ampunan. Sering sudah engkau jatuh, jalan pincang-pincang, dan lutut bergemetar. Mengapa masih saja kaulawan segala lelah? Berhentilah barang sedetik.\n\n

Waktu memang tiada berjeda, tetapi pahamilah bahwa dirimu butuh rebah. Meski masih amat panjang jalan di depanmu, meski masih amat luas lingkup dunia yang harus kaujelajahi, kaubutuh menepi sesekali.\n\n

Lihatlah ke sekitar. Kian jauh kauayunkan kaki-kaki yang sedari kecil Mak pijat bila hendak tidur, kian banyak pula kisah menjelma rindu belaka tanpa pernah punya kepastian kapan tertebus.\n\n

Tidur, Nak…\n\n

Mak tahu, kauingin secepat mungkin kabur dari pahit dan luka masa lalu. Tapi, Nak… Jangan semuanya kaulupakan. Percayalah, dari balik kesedihan, akan kautemukan makna baru. Meski sedikit dan amat kecil yang bisa kaupetik, tetapi itu ‘kan jadi bekal demi langkahmu selanjutnya.\n\n

Tidakkah kausadari, betapa karena luka dan memang hanya oleh luka hatimu lebih tabah, senyummu makin bersinar, dan air matamu tiada lagi mudah jatuh. Ingat, Nak… Cinta tidak melulu melukai atau mengecewakan. Sesekali cinta mendewasakanmu.\n\n

Tidur, Nak…\n\n

Keringatmu telah banyak tercecer, membaur dengan debu dan panas matahari yang menyengat amat kalap kala siang sedang terik-teriknya. Darah dan air matamu yang jatuh ke tanah menjadi titik-titik petunjuk bagi mereka yang sempat tersesat di belakangmu.\n\n

Tidak adakah perayaan bagi dirimu sendiri?\n\n

Engkau sudah amat jauh pergi dari rumah. Bila memang tiada akan kembali, Mak tak marah. Mak paham, telah amat yakin kautelah pilih jalan hidup. Mak hanya minta satu, mudah-mudahan engkau berkenan. Kalau kelak engkau benar-benar tak kuasa lagi melangkah, napasmu sudah tak sanggup membawamu lebih jauh lagi, tengok ke belakang. Di sanalah Mak selama ini ikut melangkah mengawasimu sambil menahan luka, sebab kauurung tidur demi mimpi yang serasa tiada habis.\n\n

Tidur ya, Nak. Sumpah, hatimu butuh rehat.\n\n
    </string>
    <string name="avatar_inage">Avatar Image</string>
    <string name="editName_hint">What is your name?</string>
    <string name="done_button">Done</string>
</resources>